Fixed menu; compact on mobile, and such

--- a/src/_main.less
+++ b/src/_main.less
@@ -16,15 +16,19 @@ body, html {
 }
 
 .header {
-	//background-color: rgba(51, 51, 51, 0.75);
+	background-color: rgba(51, 51, 51, 0.75);
 	margin-right: auto;
 	margin-left: auto;
-	padding: 0px @m-one;
-  	position: fixed;
-  	box-sizing: border-box;
+	padding: 0 (@m-one * 2) 0 @m-one;
+  position: fixed;
+	box-sizing: border-box;
 	display: block;
 	width: 100%;
 	z-index: 2;
+
+  .flex .btn {
+    float: right;
+  }
 }
 
 .content {
